// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitDiff renders 1`] = `
<SplitTable>
  <SplitBody>
    <tr
      key="0"
    >
      <Cell
        isRemoved={
          Object {
            "added": undefined,
            "count": 1,
            "removed": true,
            "value": "restaurant",
          }
        }
      >
        <Line>
          <Word
            isRemoved={true}
            key="0"
          >
            restaurant
          </Word>
        </Line>
      </Cell>
      <Gap />
      <Cell
        isAdded={
          Object {
            "added": true,
            "count": 1,
            "removed": undefined,
            "value": "aura",
          }
        }
      >
        <Line>
          <Word
            isAdded={true}
            key="0"
          >
            aura
          </Word>
        </Line>
      </Cell>
    </tr>
  </SplitBody>
</SplitTable>
`;

exports[`SplitDiff renders with newlines 1`] = `
<SplitTable>
  <SplitBody>
    <tr
      key="0"
    >
      <Cell
        isRemoved={
          Object {
            "added": undefined,
            "count": 1,
            "removed": true,
            "value": "this is my restaurant",
          }
        }
      >
        <Line>
          <Word
            isRemoved={true}
            key="0"
          >
            this is my restaurant
          </Word>
        </Line>
      </Cell>
      <Gap />
      <Cell
        isAdded={
          Object {
            "added": true,
            "count": 1,
            "removed": undefined,
            "value": "aura",
          }
        }
      >
        <Line>
          <Word
            isAdded={true}
            key="0"
          >
            aura
          </Word>
        </Line>
      </Cell>
    </tr>
    <tr
      key="1"
    >
      <Cell
        isRemoved={
          Object {
            "added": undefined,
            "count": 1,
            "removed": true,
            "value": "    and restaurant",
          }
        }
      >
        <Line>
          <Word
            isRemoved={true}
            key="0"
          >
                and restaurant
          </Word>
        </Line>
      </Cell>
      <Gap />
      <Cell
        isAdded={
          Object {
            "added": true,
            "count": 1,
            "removed": undefined,
            "value": "    and your aura",
          }
        }
      >
        <Line>
          <Word
            isAdded={true}
            key="0"
          >
                and your aura
          </Word>
        </Line>
      </Cell>
    </tr>
    <tr
      key="2"
    >
      <Cell>
        <Line>
          <Word
            key="0"
          >
                common
          </Word>
        </Line>
      </Cell>
      <Gap />
      <Cell>
        <Line>
          <Word
            key="0"
          >
                common
          </Word>
        </Line>
      </Cell>
    </tr>
  </SplitBody>
</SplitTable>
`;
